--- a/provider-gcp/examples-generated/storage/bucket.yaml
+++ b/provider-gcp/examples-generated/storage/bucket.yaml
@@ -1,7 +1,11 @@
 apiVersion: storage.gcp.upbound.io/v1alpha2
 kind: Bucket
 metadata:
-  name: example
+  name: official-example-bucket
+  annotations:
+    # Note that this will be the actual bucket name, so it has to be globally
+    #  unique/available.
+    crossplane.io/external-name: official-example-bucket
 spec:
   forProvider:
     cors:
