--- a/provider-gcp/Makefile
+++ b/provider-gcp/Makefile
@@ -44,6 +44,8 @@ GO111MODULE = on
 # ====================================================================================
 # Setup Kubernetes tools
 
+UP_VERSION = v0.12.0-rc.0.30.g591e132
+UP_CHANNEL = main
 -include build/makelib/k8s_tools.mk
 
 # ====================================================================================
@@ -95,6 +97,22 @@ run: go.build
 	@$(INFO) Running Crossplane locally out-of-cluster . . .
 	@# To see other arguments that can be provided, run the command with --help instead
 	$(GO_OUT_DIR)/provider --debug
+
+xpkg.build: $(UP)
+	@$(INFO) Building package provider-gcp-$(VERSION).xpkg
+	@mkdir -p $(OUTPUT_DIR)/xpkg
+	@$(UP) xpkg build --controller $(BUILD_REGISTRY)/provider-gcp-controller-$(SAFEHOSTARCH) -f ./package -e ./examples --name ../_output/xpkg/provider-gcp-$(VERSION).xpkg || $(FAIL)
+	@$(OK) Built package provider-gcp-$(VERSION).xpkg
+
+xpkg.push: $(UP)
+	@$(INFO) Pushing package provider-gcp-$(VERSION).xpkg
+	@$(UP) xpkg push -f $(OUTPUT_DIR)/provider-gcp-$(VERSION).xpkg upbound/provider-gcp-staging:$(VERSION) || $(FAIL)
+	@$(OK) Pushed package provider-gcp-$(VERSION).xpkg
+
+xpkg.load: $(UP)
+	@$(INFO) Loading package provider-gcp-$(VERSION).xpkg into Docker daemon
+	@docker load -i $(OUTPUT_DIR)/xpkg/provider-gcp-$(VERSION).xpkg
+	@$(OK) Loaded package provider-gcp-$(VERSION).xpkg into Docker daemon
 
 .PHONY: cobertura submodules fallthrough run crds.clean
 
