Drop provider-gcp image building
Drops provider-gcp image building in favor of xpkg machinery.

Signed-off-by: hasheddan <georgedanielmangum@gmail.com>

--- a/provider-gcp/Makefile
+++ b/provider-gcp/Makefile
@@ -52,7 +52,7 @@ UP_CHANNEL = main
 # Setup Images
 
 DOCKER_REGISTRY ?= crossplane
-IMAGES = provider-gcp provider-gcp-controller
+IMAGES = provider-gcp-controller
 -include build/makelib/image.mk
 
 # ====================================================================================
