Temporarily gate pushing to Upbound Marketplace to main branch
We are currently seeing that the robot secrets are available even in PRs
from forks, so we are temporarily constraining pushing to only from the
main branch.

Signed-off-by: hasheddan <georgedanielmangum@gmail.com>

--- a/provider-gcp/Makefile
+++ b/provider-gcp/Makefile
@@ -101,12 +101,12 @@ run: go.build
 xpkg.build: $(UP)
 	@$(INFO) Building package provider-gcp-$(VERSION).xpkg
 	@mkdir -p $(OUTPUT_DIR)/xpkg
-	@$(UP) xpkg build --controller $(BUILD_REGISTRY)/xpkg/provider-gcp-controller-$(SAFEHOSTARCH) -f ./package -e ./examples --name ../_output/xpkg/provider-gcp-$(VERSION).xpkg || $(FAIL)
+	@$(UP) xpkg build --controller $(BUILD_REGISTRY)/provider-gcp-controller-$(SAFEHOSTARCH) -f ./package -e ./examples --name ../_output/xpkg/provider-gcp-$(VERSION).xpkg || $(FAIL)
 	@$(OK) Built package provider-gcp-$(VERSION).xpkg
 
 xpkg.push: $(UP)
 	@$(INFO) Pushing package provider-gcp-$(VERSION).xpkg
-	@$(UP) xpkg push -f $(OUTPUT_DIR)/provider-gcp-$(VERSION).xpkg upbound/provider-gcp-staging:$(VERSION) || $(FAIL)
+	@$(UP) xpkg push -f $(OUTPUT_DIR)/xpkg/provider-gcp-$(VERSION).xpkg upbound/provider-gcp-staging:$(VERSION) || $(FAIL)
 	@$(OK) Pushed package provider-gcp-$(VERSION).xpkg
 
 xpkg.load: $(UP)
