Use xpkg.upbound.io explicitly in pushing
Updates all xpkg push operations to be explicit about using
xpkg.upbound.io. The default in up is still registry.upbound.io, but
that causes issues when pushing blobs due to the redirects to
xpkg.upbound.io from docker distribution, which cause
go-containerregistry not to send bearer token because of mismatched
domains.

Signed-off-by: hasheddan <georgedanielmangum@gmail.com>

--- a/provider-gcp/Makefile
+++ b/provider-gcp/Makefile
@@ -106,7 +106,7 @@ xpkg.build: $(UP)
 
 xpkg.push: $(UP)
 	@$(INFO) Pushing package provider-gcp-$(VERSION).xpkg
-	@$(UP) xpkg push -f $(OUTPUT_DIR)/xpkg/provider-gcp-$(VERSION).xpkg upbound/provider-gcp-staging:$(VERSION) || $(FAIL)
+	@$(UP) xpkg push -f $(OUTPUT_DIR)/xpkg/provider-gcp-$(VERSION).xpkg xpkg.upbound.io/upbound/provider-gcp-staging:$(VERSION) || $(FAIL)
 	@$(OK) Pushed package provider-gcp-$(VERSION).xpkg
 
 xpkg.load: $(UP)
