--- a/provider-gcp/examples/providerconfig.yaml
+++ b/provider-gcp/examples/providerconfig.yaml
@@ -1,7 +1,7 @@
 apiVersion: gcp.upbound.io/v1alpha1
 kind: ProviderConfig
 metadata:
-  name: example
+  name: default
 spec:
   projectID: official-provider-testing
   credentials:
