Move apiVersions of examples
Signed-off-by: Sergen Yalçın <yalcinsergen97@gmail.com>

--- a/provider-gcp/examples/cloudplatform/folder.yaml
+++ b/provider-gcp/examples/cloudplatform/folder.yaml
@@ -1,4 +1,4 @@
-apiVersion: cloudplatform.gcp.upbound.io/v1alpha2
+apiVersion: cloudplatform.gcp.upbound.io/v1beta1
 kind: Folder
 metadata:
   name: example
