--- a/provider-gcp/examples/monitoring/alertpolicy.yaml
+++ b/provider-gcp/examples/monitoring/alertpolicy.yaml
@@ -1,4 +1,4 @@
-apiVersion: monitoring.gcp.upbound.io/v1alpha2
+apiVersion: monitoring.gcp.upbound.io/v1beta1
 kind: AlertPolicy
 metadata:
   name: example
