--- a/provider-gcp/examples/cloudplatform/serviceaccount.yaml
+++ b/provider-gcp/examples/cloudplatform/serviceaccount.yaml
@@ -1,4 +1,4 @@
-apiVersion: cloudplatform.gcp.upbound.io/v1alpha2
+apiVersion: cloudplatform.gcp.upbound.io/v1beta1
 kind: ServiceAccount
 metadata:
   name: example-service-account
