--- a/provider-gcp/examples/cloudplatform/serviceaccountkey.yaml
+++ b/provider-gcp/examples/cloudplatform/serviceaccountkey.yaml
@@ -1,4 +1,4 @@
-apiVersion: cloudplatform.gcp.upbound.io/v1alpha2
+apiVersion: cloudplatform.gcp.upbound.io/v1beta1
 kind: ServiceAccountKey
 metadata:
   name: example-service-account-key
