--- a/provider-gcp/examples/container/nodepool.yaml
+++ b/provider-gcp/examples/container/nodepool.yaml
@@ -1,4 +1,4 @@
-apiVersion: container.gcp.upbound.io/v1alpha2
+apiVersion: container.gcp.upbound.io/v1beta1
 kind: NodePool
 metadata:
   name: example-node-pool
