--- a/provider-gcp/examples/sql/database.yaml
+++ b/provider-gcp/examples/sql/database.yaml
@@ -1,4 +1,4 @@
-apiVersion: sql.gcp.upbound.io/v1alpha2
+apiVersion: sql.gcp.upbound.io/v1beta1
 kind: Database
 metadata:
   name: example-database
