--- a/provider-gcp/examples/sql/instance.yaml
+++ b/provider-gcp/examples/sql/instance.yaml
@@ -1,4 +1,4 @@
-apiVersion: sql.gcp.upbound.io/v1alpha2
+apiVersion: sql.gcp.upbound.io/v1beta1
 kind: DatabaseInstance
 metadata:
   name: example-instance
