--- a/provider-gcp/examples/sql/user.yaml
+++ b/provider-gcp/examples/sql/user.yaml
@@ -6,7 +6,7 @@ metadata:
   name: example-sql-user
   namespace: crossplane-system
 ---
-apiVersion: sql.gcp.upbound.io/v1alpha2
+apiVersion: sql.gcp.upbound.io/v1beta1
 kind: User
 metadata:
   name: example-user
