Add ExternalNameConfigs table for managing all external name configurations from a file
Signed-off-by: Sergen Yalçın <yalcinsergen97@gmail.com>

--- a/provider-gcp/package/crds/cloudplatform.gcp.upbound.io_folders.yaml
+++ b/provider-gcp/package/crds/cloudplatform.gcp.upbound.io_folders.yaml
@@ -188,6 +188,8 @@ spec:
                     type: string
                   lifecycleState:
                     type: string
+                  name:
+                    type: string
                 type: object
               conditions:
                 description: Conditions of the resource.
