Update kubebuilder markers
Signed-off-by: ezgidemirel <ezgidemirel91@gmail.com>

--- a/provider-gcp/package/crds/gcp.upbound.io_providerconfigs.yaml
+++ b/provider-gcp/package/crds/gcp.upbound.io_providerconfigs.yaml
@@ -11,7 +11,7 @@ spec:
   names:
     categories:
     - crossplane
-    - provider
+    - providerconfig
     - gcp
     kind: ProviderConfig
     listKind: ProviderConfigList
