Address reivew comments
Signed-off-by: Sergen Yalçın <yalcinsergen97@gmail.com>

--- a/provider-gcp/package/crds/compute.gcp.upbound.io_addresses.yaml
+++ b/provider-gcp/package/crds/compute.gcp.upbound.io_addresses.yaml
@@ -163,6 +163,8 @@ spec:
                           is selected.
                         type: object
                     type: object
+                required:
+                - region
                 type: object
               providerConfigRef:
                 default:
