--- a/provider-gcp/package/crds/compute.gcp.upbound.io_disks.yaml
+++ b/provider-gcp/package/crds/compute.gcp.upbound.io_disks.yaml
@@ -225,6 +225,8 @@ spec:
                   zone:
                     description: A reference to the zone where the disk resides.
                     type: string
+                required:
+                - zone
                 type: object
               providerConfigRef:
                 default:
