--- a/provider-gcp/package/crds/compute.gcp.upbound.io_havpngateways.yaml
+++ b/provider-gcp/package/crds/compute.gcp.upbound.io_havpngateways.yaml
@@ -115,6 +115,8 @@ spec:
                           type: string
                       type: object
                     type: array
+                required:
+                - region
                 type: object
               providerConfigRef:
                 default:
