--- a/provider-gcp/package/crds/compute.gcp.upbound.io_instancegroupmanagers.yaml
+++ b/provider-gcp/package/crds/compute.gcp.upbound.io_instancegroupmanagers.yaml
@@ -345,6 +345,7 @@ spec:
                 required:
                 - baseInstanceName
                 - version
+                - zone
                 type: object
               providerConfigRef:
                 default:
