--- a/provider-gcp/package/crds/compute.gcp.upbound.io_instancegroups.yaml
+++ b/provider-gcp/package/crds/compute.gcp.upbound.io_instancegroups.yaml
@@ -126,6 +126,8 @@ spec:
                     description: The zone that this instance group should be created
                       in.
                     type: string
+                required:
+                - zone
                 type: object
               providerConfigRef:
                 default:
