--- a/provider-gcp/package/crds/compute.gcp.upbound.io_instances.yaml
+++ b/provider-gcp/package/crds/compute.gcp.upbound.io_instances.yaml
@@ -562,6 +562,7 @@ spec:
                 - bootDisk
                 - machineType
                 - networkInterface
+                - zone
                 type: object
               providerConfigRef:
                 default:
