--- a/provider-gcp/package/crds/compute.gcp.upbound.io_interconnectattachments.yaml
+++ b/provider-gcp/package/crds/compute.gcp.upbound.io_interconnectattachments.yaml
@@ -191,6 +191,8 @@ spec:
                       the range 2-4094. When using PARTNER type this will be managed
                       upstream.
                     type: number
+                required:
+                - region
                 type: object
               providerConfigRef:
                 default:
