--- a/provider-gcp/package/crds/compute.gcp.upbound.io_networkendpointgroups.yaml
+++ b/provider-gcp/package/crds/compute.gcp.upbound.io_networkendpointgroups.yaml
@@ -142,6 +142,8 @@ spec:
                   zone:
                     description: Zone where the network endpoint group is located.
                     type: string
+                required:
+                - zone
                 type: object
               providerConfigRef:
                 default:
