--- a/provider-gcp/package/crds/compute.gcp.upbound.io_resourcepolicies.yaml
+++ b/provider-gcp/package/crds/compute.gcp.upbound.io_resourcepolicies.yaml
@@ -266,6 +266,8 @@ spec:
                       - schedule
                       type: object
                     type: array
+                required:
+                - region
                 type: object
               providerConfigRef:
                 default:
