--- a/provider-gcp/package/crds/compute.gcp.upbound.io_subnetworks.yaml
+++ b/provider-gcp/package/crds/compute.gcp.upbound.io_subnetworks.yaml
@@ -211,6 +211,7 @@ spec:
                     type: string
                 required:
                 - ipCidrRange
+                - region
                 type: object
               providerConfigRef:
                 default:
