--- a/provider-gcp/package/crds/compute.gcp.upbound.io_targetpools.yaml
+++ b/provider-gcp/package/crds/compute.gcp.upbound.io_targetpools.yaml
@@ -101,6 +101,8 @@ spec:
                       "CLIENT_IP" (hash of the source/dest addresses / ports), and
                       "CLIENT_IP_PROTO" also includes the protocol (default "NONE").
                     type: string
+                required:
+                - region
                 type: object
               providerConfigRef:
                 default:
