--- a/provider-gcp/package/crds/container.gcp.upbound.io_clusters.yaml
+++ b/provider-gcp/package/crds/container.gcp.upbound.io_clusters.yaml
@@ -1159,6 +1159,8 @@ spec:
                           type: string
                       type: object
                     type: array
+                required:
+                - location
                 type: object
               providerConfigRef:
                 default:
