--- a/provider-gcp/package/crds/redis.gcp.upbound.io_instances.yaml
+++ b/provider-gcp/package/crds/redis.gcp.upbound.io_instances.yaml
@@ -232,6 +232,7 @@ spec:
                     type: string
                 required:
                 - memorySizeGb
+                - region
                 type: object
               providerConfigRef:
                 default:
