--- a/provider-gcp/package/crds/compute.gcp.upbound.io_routernats.yaml
+++ b/provider-gcp/package/crds/compute.gcp.upbound.io_routernats.yaml
@@ -228,6 +228,7 @@ spec:
                     type: number
                 required:
                 - natIpAllocateOption
+                - region
                 - sourceSubnetworkIpRangesToNat
                 type: object
               providerConfigRef:
