Mark google_pubsub_lite_subscription.zone required & remove unnecessary refs

--- a/provider-gcp/package/crds/pubsub.gcp.upbound.io_litesubscriptions.yaml
+++ b/provider-gcp/package/crds/pubsub.gcp.upbound.io_litesubscriptions.yaml
@@ -111,6 +111,8 @@ spec:
                   zone:
                     description: The zone of the pubsub lite topic.
                     type: string
+                required:
+                - zone
                 type: object
               providerConfigRef:
                 default:
