gcp: Configure google_dns_managed_zone & google_dns_policy

--- a/provider-gcp/examples/pubsub/package/composite.yaml
+++ b/provider-gcp/examples/pubsub/package/composite.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     cloud: gcp
 spec:
-  writeConnectionSecretsToNamespace: crossplane-system
+  writeConnectionSecretsToNamespace: upbound-system
   compositeTypeRef:
     apiVersion: provider.upbound.io/v1alpha1
     kind: PubSub
